# agent-forge

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RESUME.md  SECURITY.md  THIRD_PARTY_NOTICES.md
tests/: conftest.py  pyproject.toml  pytest.ini
tests/_legacy/: README.md  kpmg_harness_reference.py
tests/evals/: _invoke.py  _judge.py  conftest.py
tests/integration/: test_install_lifecycle_amp.py  test_install_lifecycle_claude-code.py  test_install_lifecycle_codex-cli.py  test_install_lifecycle_copilot-cli.py  test_install_lifecycle_crush.py  test_install_lifecycle_cursor.py  test_install_lifecycle_gemini-cli.py  test_install_lifecycle_kilocode.py  test_install_lifecycle_opencode.py  test_remove_clean.py  test_update_propagation.py
tests/integration/dockerfiles/: amp.Dockerfile  claude-code.Dockerfile  codex-cli.Dockerfile  copilot-cli.Dockerfile  crush.Dockerfile  cursor.Dockerfile  gemini-cli.Dockerfile  kilocode.Dockerfile  opencode.Dockerfile
tests/unit/: test_aggregate_notices.py  test_boundary_guard.py  test_canonical.py  test_detectors.py  test_frontmatter.py  test_github.py  test_install_index.py  test_invoke.py  test_judge.py  test_manifest.py  test_marketplace_schema.py  test_no_kpmg_residue.py  test_plugin_json_schema.py  test_reference_links_resolve.py  test_skill_md_frontmatter.py  test_tier1_artifacts_sync.py  test_translator_registry.py
tests/unit/cli/: test_available.py  test_detect.py  test_doctor.py  test_history.py  test_list.py  test_pin.py  test_remove.py  test_sync.py  test_update.py
tests/unit/translators/: test_amp.py  (+9 more)
(+844 files in other folders)
